tests/test_err.txt
warning: profiles for the non root package will be ignored, specify profiles at the workspace root:
package:   /home/abujulaybeeb/Documents/Drips 7/MentorsMind-Contract/escrow/Cargo.toml
workspace: /home/abujulaybeeb/Documents/Drips 7/MentorsMind-Contract/Cargo.toml
warning: profiles for the non root package will be ignored, specify profiles at the workspace root:
package:   /home/abujulaybeeb/Documents/Drips 7/MentorsMind-Contract/contracts/verification/Cargo.toml
workspace: /home/abujulaybeeb/Documents/Drips 7/MentorsMind-Contract/Cargo.toml
warning: profiles for the non root package will be ignored, specify profiles at the workspace root:
package:   /home/abujulaybeeb/Documents/Drips 7/MentorsMind-Contract/contracts/vesting/Cargo.toml
workspace: /home/abujulaybeeb/Documents/Drips 7/MentorsMind-Contract/Cargo.toml
warning: profiles for the non root package will be ignored, specify profiles at the workspace root:
package:   /home/abujulaybeeb/Documents/Drips 7/MentorsMind-Contract/contracts/payment_router/Cargo.toml
workspace: /home/abujulaybeeb/Documents/Drips 7/MentorsMind-Contract/Cargo.toml
warning: profiles for the non root package will be ignored, specify profiles at the workspace root:
package:   /home/abujulaybeeb/Documents/Drips 7/MentorsMind-Contract/contracts/mnt-token/Cargo.toml
workspace: /home/abujulaybeeb/Documents/Drips 7/MentorsMind-Contract/Cargo.toml
warning: profiles for the non root package will be ignored, specify profiles at the workspace root:
package:   /home/abujulaybeeb/Documents/Drips 7/MentorsMind-Contract/contracts/staking/Cargo.toml
workspace: /home/abujulaybeeb/Documents/Drips 7/MentorsMind-Contract/Cargo.toml
   Compiling mentorminds-integration-tests v0.1.0 (/home/abujulaybeeb/Documents/Drips 7/MentorsMind-Contract/tests)
error[E0432]: unresolved import `mentorminds_reputation`
 --> tests/interoperability/reputation_escrow.rs:5:9
  |
5 | ...se mentorminds_reputation::{...
  |       ^^^^^^^^^^^^^^^^^^^^^^ use of unresolved module or unlinked crate `mentorminds_reputation`
  |
help: there is a crate or module with a similar name
  |
5 -     use mentorminds_reputation::{ReputationContract, ReputationContractClient};
5 +     use mentorminds_verification::{ReputationContract, ReputationContractClient};
  |

error[E0599]: no method named `into_val` found for type `u32` in the current scope
   --> tests/interoperability/governance_chain.rs:45:38
    |
 45 | ...32.into_val(&e...
    |       ^^^^^^^^
    |
   ::: /home/abujulaybeeb/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/soroban-sdk-21.7.7/src/env.rs:90:8
    |
 90 | ...fn into_val(&s...
    |       -------- the method is available for `u32` here
    |
    = help: items from traits can only be used if the trait is in scope
help: there is a method `into` with a similar name, but with different arguments
   --> /home/abujulaybeeb/.rustup/toolchains/stable-x86_64-unknown-linux-gnu/lib/rustlib/src/rust/library/core/src/convert/mod.rs:455:5
    |
455 |     fn into(self) -> T;
    |     ^^^^^^^^^^^^^^^^^^^
help: trait `IntoVal` which provides `into_val` is implemented but not in scope; perhaps you want to import it
    |
  3 +     use soroban_sdk::IntoVal;
    |

error[E0599]: no method named `into_val` found for type `u64` in the current scope
   --> tests/interoperability/governance_chain.rs:52:45
    |
 52 | ...4).into_val(&e...
    |       ^^^^^^^^
    |
   ::: /home/abujulaybeeb/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/soroban-sdk-21.7.7/src/env.rs:90:8
    |
 90 | ...fn into_val(&s...
    |       -------- the method is available for `u64` here
    |
    = help: items from traits can only be used if the trait is in scope
help: there is a method `into` with a similar name, but with different arguments
   --> /home/abujulaybeeb/.rustup/toolchains/stable-x86_64-unknown-linux-gnu/lib/rustlib/src/rust/library/core/src/convert/mod.rs:455:5
    |
455 |     fn into(self) -> T;
    |     ^^^^^^^^^^^^^^^^^^^
help: trait `IntoVal` which provides `into_val` is implemented but not in scope; perhaps you want to import it
    |
  3 +     use soroban_sdk::IntoVal;
    |

error[E0599]: no method named `set_timestamp` found for struct `Ledger` in the current scope
   --> tests/interoperability/governance_chain.rs:67:22
    |
 67 | ...().set_timestamp(en...
    |       ^^^^^^^^^^^^^
    |
   ::: /home/abujulaybeeb/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/soroban-sdk-21.7.7/src/testutils.rs:231:8
    |
231 | ...fn set_timestamp(&s...
    |       ------------- the method is available for `soroban_sdk::ledger::Ledger` here
    |
    = help: items from traits can only be used if the trait is in scope
help: there is a method `timestamp` with a similar name, but with different arguments
   --> /home/abujulaybeeb/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/soroban-sdk-21.7.7/src/ledger.rs:87:5
    |
 87 |     pub fn timestamp(&self) -> u64 {
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    = note: the full name for the type has been written to '/home/abujulaybeeb/Documents/Drips 7/MentorsMind-Contract/target/debug/deps/mentorminds_integration_tests-689b2b48d7d1bdf3.long-type-18436482499587447575.txt'
    = note: consider using `--verbose` to print the full type name to the console
help: trait `Ledger` which provides `set_timestamp` is implemented but not in scope; perhaps you want to import it
    |
  3 +     use soroban_sdk::testutils::Ledger;
    |

error[E0599]: no method named `set_timestamp` found for struct `Ledger` in the current scope
   --> tests/interoperability/governance_chain.rs:79:22
    |
 79 | ...().set_timestamp(en...
    |       ^^^^^^^^^^^^^
    |
   ::: /home/abujulaybeeb/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/soroban-sdk-21.7.7/src/testutils.rs:231:8
    |
231 | ...fn set_timestamp(&s...
    |       ------------- the method is available for `soroban_sdk::ledger::Ledger` here
    |
    = help: items from traits can only be used if the trait is in scope
help: there is a method `timestamp` with a similar name, but with different arguments
   --> /home/abujulaybeeb/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/soroban-sdk-21.7.7/src/ledger.rs:87:5
    |
 87 |     pub fn timestamp(&self) -> u64 {
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    = note: the full name for the type has been written to '/home/abujulaybeeb/Documents/Drips 7/MentorsMind-Contract/target/debug/deps/mentorminds_integration_tests-689b2b48d7d1bdf3.long-type-18436482499587447575.txt'
    = note: consider using `--verbose` to print the full type name to the console
help: trait `Ledger` which provides `set_timestamp` is implemented but not in scope; perhaps you want to import it
    |
  3 +     use soroban_sdk::testutils::Ledger;
    |

warning: unused variable: `lending_client`
  --> tests/interoperability/lending_credit.rs:24:13
   |
24 | ...et lending_client = ...
   |       ^^^^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_lending_client`
   |
   = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

warning: unused variable: `result`
  --> tests/interoperability/lending_credit.rs:31:13
   |
31 | ...et result = en...
   |       ^^^^^^ help: if this is intentional, prefix it with an underscore: `_result`

Some errors have detailed explanations: E0432, E0599.
For more information about an error, try `rustc --explain E0432`.
warning: `mentorminds-integration-tests` (lib test) generated 2 warnings
error: could not compile `mentorminds-integration-tests` (lib test) due to 5 previous errors; 2 warnings emitted
